monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2102/A2102c.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2102;

grammar A2102c {
  abstract A;

  B implements A;

}

